feat: add more щ letter

--- a/src/Russian Dvorak v2.bundle/Contents/Info.plist
+++ b/src/Russian Dvorak v2.bundle/Contents/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.sil.ukelele.keyboardlayout.russianphoneticdvorak</string>
 	<key>CFBundleName</key>
-	<string>Russian Dvorak V2</string>
+	<string>Russian Dvorak v2</string>
 	<key>CFBundleVersion</key>
 	<string></string>
 	<key>KLInfo_Russian Phonetic Dvorak</key>
