--- a/src/Russian Dvorak v2.bundle/Contents/version.plist
+++ b/src/Russian Dvorak v2.bundle/Contents/version.plist
@@ -5,7 +5,7 @@
 	<key>BuildVersion</key>
 	<string></string>
 	<key>ProjectName</key>
-	<string>Russian Dvorak V2</string>
+	<string>Russian Dvorak v2</string>
 	<key>SourceVersion</key>
 	<string></string>
 </dict>
